--- a/node2.yml
+++ b/node2.yml
@@ -6,9 +6,9 @@ services:
       context: elasticsearch/
       args:
         ELK_VERSION: $ELK_VERSION
-    container_name: es-master
+    container_name: es-node2
     volumes:
-      - ./elasticsearch/config/elasticsearch_node1.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
+      - ./elasticsearch/config/elasticsearch_node22yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
     ports:
       - "9200:9200"
       - "9300:9300"
