--- a/node2.yml
+++ b/node2.yml
@@ -8,7 +8,7 @@ services:
         ELK_VERSION: $ELK_VERSION
     container_name: es-node2
     volumes:
-      - ./elasticsearch/config/elasticsearch_node22yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
+      - ./elasticsearch/config/elasticsearch_node2.yml:/usr/share/elasticsearch/config/elasticsearch.yml:ro
     ports:
       - "9200:9200"
       - "9300:9300"
