--- a/elasticsearch/config/elasticsearch_master.yml
+++ b/elasticsearch/config/elasticsearch_master.yml
@@ -1,8 +1,8 @@
----
 ## Default Elasticsearch configuration from elasticsearch-docker.
 ## from https://github.com/elastic/elasticsearch-docker/blob/master/build/elasticsearch/elasticsearch.yml
 #
 cluster.name: "docker-cluster"
+network.bind_host: 0.0.0.0
 network.host: 0.0.0.0
 
 # minimum_master_nodes need to be explicitly set when bound on a public IP
@@ -21,4 +21,5 @@ node.data: true
 http.cors.enabled: true
 http.cors.allow-origin: "*"
 #discovery.zen.ping.unicast.hosts: ["elasticsearch","elasticsearch1","elasticsearch2"]
-discovery.zen.ping.unicast.hosts: ["192.168.0.43","192.168.0.42","192.168.0.41"]
+#discovery.zen.ping.unicast.hosts: ["192.168.0.43","192.168.0.42","192.168.0.41"]
+discovery.zen.ping.unicast.hosts: ["192.168.201.63","192.168.201.62","192.168.201.61"]
