--- a/elasticsearch/config/elasticsearch_node1.yml
+++ b/elasticsearch/config/elasticsearch_node1.yml
@@ -4,7 +4,8 @@
 #cluster.name: "docker-cluster"
 #network.bind_host: 0.0.0.0
 #network.host: 0.0.0.0
-
+network.host: 192.168.201.62
+http.port: 9200
 # minimum_master_nodes need to be explicitly set when bound on a public IP
 # set to 1 to allow single node clusters
 # Details: https://github.com/elastic/elasticsearch/pull/17288
