--- a/elasticsearch/config/elasticsearch_node2.yml
+++ b/elasticsearch/config/elasticsearch_node2.yml
@@ -1,9 +1,10 @@
 ## Default Elasticsearch configuration from elasticsearch-docker.
 ## from https://github.com/elastic/elasticsearch-docker/blob/master/build/elasticsearch/elasticsearch.yml
 #
-cluster.name: "docker-cluster"
-network.bind_host: 0.0.0.0
-network.host: 0.0.0.0
+#cluster.name: "docker-cluster"
+#network.bind_host: 0.0.0.0
+network.host: 192.168.201.61
+http.port: 9200
 
 # minimum_master_nodes need to be explicitly set when bound on a public IP
 # set to 1 to allow single node clusters
