--- a/elasticsearch/config/elasticsearch_node1.yml
+++ b/elasticsearch/config/elasticsearch_node1.yml
@@ -24,4 +24,4 @@ http.cors.allow-origin: "*"
 #discovery.zen.ping.unicast.hosts: elasticsearch
 #discovery.zen.ping.unicast.hosts: ["elasticsearch","elasticsearch1","elasticsearch2"]
 #discovery.zen.ping.unicast.hosts: ["192.168.0.43","192.168.0.42","192.168.0.41"]
-#discovery.zen.ping.unicast.hosts: ["192.168.201.63","192.168.201.62","192.168.201.61"]
+discovery.zen.ping.unicast.hosts: ["192.168.201.63","192.168.201.62","192.168.201.61"]
