--- a/elasticsearch/config/elasticsearch_node1.yml
+++ b/elasticsearch/config/elasticsearch_node1.yml
@@ -1,18 +1,8 @@
-## Default Elasticsearch configuration from elasticsearch-docker.
-## from https://github.com/elastic/elasticsearch-docker/blob/master/build/elasticsearch/elasticsearch.yml
-#
-#cluster.name: "docker-cluster"
+cluster.name: "docker-cluster"
 #network.bind_host: 0.0.0.0
 network.host: 0.0.0.0
 http.port: 9200
-# minimum_master_nodes need to be explicitly set when bound on a public IP
-# set to 1 to allow single node clusters
-# Details: https://github.com/elastic/elasticsearch/pull/17288
 discovery.zen.minimum_master_nodes: 1
-
-## Use single node discovery in order to disable production mode and avoid bootstrap checks
-## see https://www.elastic.co/guide/en/elasticsearch/reference/current/bootstrap-checks.html
-#
 #discovery.type: single-node
 #cluster.routing.allocation.disk.threshold_enabled: false
 node.name: node1
@@ -20,7 +10,4 @@ node.master: false
 node.data: true
 http.cors.enabled: true
 http.cors.allow-origin: "*"
-#discovery.zen.ping.unicast.hosts: elasticsearch
-#discovery.zen.ping.unicast.hosts: ["elasticsearch","elasticsearch1","elasticsearch2"]
-#discovery.zen.ping.unicast.hosts: ["192.168.0.43","192.168.0.42","192.168.0.41"]
-discovery.zen.ping.unicast.hosts: ["192.168.201.63","192.168.201.62","192.168.201.61"]
+discovery.zen.ping.unicast.hosts: ["elasticsearch","elasticsearch1","elasticsearch2"]
